fixed layout of header adjusting navbar spacing and art elements, changed introductory paragraph. bug fixes

--- a/src/sections/header/header.scss
+++ b/src/sections/header/header.scss
@@ -177,7 +177,7 @@
 }
 
 #welcome {
-  top: 210px;
+  top: 300px;
   left: 25px;
   max-width: fit-content;
   animation: levitate 3s ease-in-out infinite;
@@ -188,7 +188,7 @@
 }
 
 #rays {
-  top: 165px;
+  top: 250px;
   left: 50px;
   border-radius: 200px;
   width: 150px;
@@ -312,7 +312,7 @@
 
 #art {
   left: 30px;
-  top: 339px;
+  top: 435px;
 
   img {
     position: absolute;
